# coordination_oru

./: .gitignore  Dockerfile  Makefile  README.md  build.gradle  compose.yaml  compose_yaml.py  coordination_oru.puml  file.csv  gradle.properties  modelROS.ucls  modelSimulation2D.ucls  path.txt  testS.json
.run/: GeneratedMapTest.run.xml
SimpleReedsSheppCarPlanner/: CMakeLists.txt
SimpleReedsSheppCarPlanner/src/: CachingPlanner.cpp  CachingReedsSheppCarPlanner.cpp  Footprint.cpp  MultipleCircleReedsSheppCarPlanner.cpp  MultipleCircleStateValidityChecker.cpp  PRMcustom.cpp  Point2DPlanning.cpp
SimpleReedsSheppCarPlanner/src/include/: Conditions.h  ConditionsOccupancy.h  ConditionsPPM.h  Footprint.h  MultipleCircleStateValidityChecker.h  PRMcustom.h  PathFinder.h
container/: build-planners.sh  chromium.sh  compose-up.sh  index.sh  prefixer.sh  record-screen.sh  scenario.sh  simulation.sh  x11vnc.sh  xvfb.sh
logprocessing/: clean-log.sh  compare-last-files.sh  consolidate-rundirs-libreoffice.sh  consolidate-rundirs-to-sorted-csv.sh  consolidate-rundirs.sh  dateize-log-names.sh  linearizations2ignored.sh  multijoin.sh  run-and-consolidate-generatedmaptest.sh  run-and-consolidate-gridtest.sh  run-and-consolidate.sh  run-demo.sh  run-generatedmaptest.sh  run-scenario.sh  run-scenarios.sh  scenario2dir.sh  show-rundir.sh  show-statistics.sh  stop-all-demos.sh  stop-run-and-consolidate.sh  strace.sh  watch-results.sh  watch-rundir.sh  watch-statistics.sh
map-generator/: background_generator.py  requirements.txt  turtle_rays.py
map-generator/generated-maps/: 3_with_bridges  3_without_bridges
map-generator/generated-maps/2024-11-28_13:17:39_with_bridges/: locations1-10.tsv  locations1-4.tsv  locations1-6.tsv  locations1-7.tsv  locations1-9.tsv  locations10-10.tsv  locations10-6.tsv  locations10-9.tsv  locations2-1.tsv  locations2-2.tsv  locations2-5.tsv  locations2-6.tsv  locations2-8.tsv  locations3-6.tsv  locations3-7.tsv  locations3-8.tsv  locations3-9.tsv  locations4-10.tsv  locations4-2.tsv  locations4-3.tsv  locations4-5.tsv  locations4-6.tsv  locations4-7.tsv  locations5-4.tsv  locations5-6.tsv  locations5-7.tsv  locations5-8.tsv  locations6-10.tsv  locations6-2.tsv  locations6-4.tsv  locations6-5.tsv  locations6-9.tsv  locations7-10.tsv  locations7-4.tsv  locations7-6.tsv  locations8-10.tsv  locations8-2.tsv  locations8-5.tsv  locations8-6.tsv  locations8-8.tsv  (+114 more)
map-generator/generated-maps/2024-11-28_13:19:18_without_bridges/: locations1-1.tsv  locations1-2.tsv  locations1-3.tsv  locations1-5.tsv  locations1-8.tsv  locations10-1.tsv  locations10-2.tsv  locations10-3.tsv  locations10-4.tsv  locations10-5.tsv  locations10-7.tsv  locations10-8.tsv  locations2-10.tsv  locations2-3.tsv  locations2-4.tsv  locations2-7.tsv  locations3-1.tsv  locations3-10.tsv  locations3-3.tsv  locations3-4.tsv  locations3-5.tsv  locations4-1.tsv  locations4-4.tsv  locations4-8.tsv  locations4-9.tsv  locations5-1.tsv  locations5-10.tsv  locations5-2.tsv  locations5-3.tsv  locations5-5.tsv  locations6-1.tsv  locations6-3.tsv  locations6-6.tsv  locations6-7.tsv  locations6-8.tsv  locations7-1.tsv  locations7-3.tsv  locations7-5.tsv  locations7-7.tsv  locations7-8.tsv  (+112 more)
maps/: basement.yaml  convert-coordinates.py  map-corridors-vi.yaml  map-corridors.yaml  map-empty-circle.yaml  map-empty.yaml  map-grid-gradient.yaml  map-grid.yaml  map-partial-1.yaml  map-partial-2.yaml  map-partial-vi.yaml  map-partial.yaml  map1.yaml  map_production_scenario.yaml  mine-map-aamas-2023.yaml  mine-map-full.yaml  mine-map-full2.yaml  mine-map-new.yaml  mine-map-paper-2023.yaml  mine-map-reduced.yaml  mine-map-test.yaml  my-map10.yaml  production-map.yaml  ramp.txt  ramp.yaml
notes/: gated-threads.dot  project-structure.dot  running-demos.md
ompl-test/: CMakeLists.txt  ConditionsPPM.h  PRMcustom.cpp  PRMcustom.h  PlannerData.cpp  PlannerDataVisualize.py  Point2DPlanning.cpp  memcmp_performance.c  memory_difference.c
projects/: Maria222.txt
scenario-analysis/: analysis.ipynb  consolidate.py  df_all_clean.ipynb  dynmodel.ipynb  dynmodel.py  dynmodel_use.ipynb  events2missions.py  generate_analysises.sh  generate_models.sh  merge_df_plotdicts.ipynb  model-autogluon.ipynb  model.ipynb  plot_all.ipynb  plot_all.py  recommender_comparison.ipynb  recommenderlib.ipynb  recommenderlib.py  requirements.txt
screenshotting/: crop-screenshot.sh  crop-screenshots.sh  make-screenshot.sh
src/main/java/se/oru/coordination/coordination_oru/: AbstractTrajectoryEnvelopeCoordinator.java  AbstractTrajectoryEnvelopeTracker.java  CollisionEvent.java  ConstantAccelerationForwardModel.java  CriticalSection.java  Dependency.java  ForwardModel.java  Mission.java  NetworkConfiguration.java  RobotAtCriticalSection.java  RobotReport.java  TrackingCallback.java  TrajectoryEnvelopeCoordinator.java  TrajectoryEnvelopeTrackerDummy.java
src/main/java/se/oru/coordination/coordination_oru/code/: AbstractVehicle.java  AutonomousVehicle.java  BarrierPhantomVehicle.java  Entry.java  Heuristics.java  HumanDrivenVehicle.java  LimitedPredictabilityVehicle.java  LimitedVisibilityVehicle.java  LookAheadVehicle.java  SafeDistance.java  Vehicle.java  VehicleSize.java  VehiclesHashMap.java
src/main/java/se/oru/coordination/coordination_oru/coordinator/: AbstractTrajectoryEnvelopeCoordinator.java  ConstantAccelerationForwardModel.java  CoordinatorDependency.java  ForwardModel.java  TrajectoryEnvelopeCoordinator.java
src/main/java/se/oru/coordination/coordination_oru/demo/: DemoDescription.java  DemoLauncher.java
src/main/java/se/oru/coordination/coordination_oru/gui/: GUIInterface.java  GUITools.java  JSONFile.java  MyRobot.java  PkgRobotWithMap.java  Point.java  Prog.java  RobotJson.java  StatusExperiment.java  StatusRobot.java  (+1 more)
src/main/resources/: Visualization.js  index.html  styles.css
(+267 files in other folders)
